--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/app.js",
+    "start": "NODE_ENV=production node build/app.js",
     "build": "tsc -p . && ncp schema build/schema",
     "start:dev": "npm run build:dev",
     "build:dev": "nodemon 'app.ts' --exec 'ts-node' app.ts -e ts,json,graphql"
