--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "graphql-upload": "^15.0.1",
     "http": "^0.0.1-security",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "~6.3.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
     "ncp": "^2.0.0",
     "typescript": "^4.7.2",
     "uuid": "^8.3.2"
@@ -49,7 +49,7 @@
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/graphql-upload": "^8.0.11",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.35",
     "@types/uuid": "^8.3.4"
